--- a/ansible/install_applications/roles/home-homeassistant.prepare/app/prepare/secrets.yaml.j2
+++ b/ansible/install_applications/roles/home-homeassistant.prepare/app/prepare/secrets.yaml.j2
@@ -3,18 +3,18 @@
 # Learn more at https://home-assistant.io/docs/configuration/secrets/
 
 
-recorder_mysql_url: mysql://{{ homeassistant_mysql_user }}:{{ homeassistant_mysql_password }}@homeassistant-mysql/{{ homeassistant_mysql_database }}?charset=utf8
+recorder_mysql_url: mysql://{{ homeassistant.mysql.user }}:{{ homeassistant.mysql.password }}@homeassistant-mysql/{{ homeassistant.mysql.database }}?charset=utf8
 
 # MQTT credentials
-mqtt_username: {{ homeassistant_mqtt_user }}
-mqtt_password: {{ homeassistant_mqtt_password }}
+mqtt_username: {{ homeassistant.mqtt.user }}
+mqtt_password: {{ homeassistant.mqtt.password }}
 
 # SMTP credentials
-smtp_username: {{ homeassistant_smtp_user }}
-smtp_password: {{ homeassistant_smtp_password }}
+smtp_username: {{ homeassistant.smtp.user }}
+smtp_password: {{ homeassistant.smtp.password }}
 smtp_recipient_user: user@mail.net
 
-{% if gotify_homeassistant_enabled %}
+{% if homeassistant.gotify.enabled %}
 # Gotify
 gotify_application_token: {{ homeassistant_gotify_application_token }}
 {% endif %}
