--- a/ansible/install_applications/roles/home-mosquitto.deploy/app/config/passwd.j2
+++ b/ansible/install_applications/roles/home-mosquitto.deploy/app/config/passwd.j2
@@ -1,4 +1,4 @@
 # {{ ansible_managed }}
-{% for credential in mosquitto_credientials.credentials %}
+{% for credential in mosquitto.credentials %}
 {{ credential }}
 {% endfor %}
