Rework vars for home-nodered

--- a/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/deploy/ingress.yaml.j2
@@ -14,7 +14,7 @@ spec:
   - host: home.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ nodered_context_root }}
+        - path: {{ nodered.context_root }}
           backend:
             serviceName: nodered
             servicePort: 80
