--- a/ansible/install_applications/roles/home-nodered.deploy/app/config/settings.js.j2
+++ b/ansible/install_applications/roles/home-nodered.deploy/app/config/settings.js.j2
@@ -101,7 +101,7 @@ module.exports = {
     // The following property can be used in place of 'httpAdminRoot' and 'httpNodeRoot',
     // to apply the same root to both parts.
     //httpRoot: '/red',
-    {% if nodered_context_root | default('/') != '/' %}httpRoot: '{{ nodered_context_root }}',{% endif %}
+    {% if nodered.context_root | default('/') != '/' %}httpRoot: '{{ nodered.context_root }}',{% endif %}
 
     // When httpAdminRoot is used to move the UI to a different root path, the
     // following property can be used to identify a directory of static content
@@ -129,11 +129,11 @@ module.exports = {
             maxAge: 120, // in seconds
         },
         ldapOptions: {
-            url: 'ldaps://{{ nodered_ldap_servername }}:636',
-            bindDN: '{{ nodered_ldap_manager_dn }}',
-            bindCredentials: '{{ nodered_ldap_manager_password }}',
-            searchBase: '{{ nodered_ldap_users_dn }}',
-            searchFilter: '(&(cn={{ '{{username}}' }})(objectClass=inetOrgPerson)(memberOf={{ nodered_ldap_group }}))',
+            url: 'ldaps://{{ nodered.ldap.servername }}:636',
+            bindDN: '{{ nodered.ldap.manager_dn }}',
+            bindCredentials: '{{ nodered.ldap.manager_password }}',
+            searchBase: '{{ nodered.ldap.users_dn }}',
+            searchFilter: '(&(cn={{ '{{username}}' }})(objectClass=inetOrgPerson)(memberOf={{ nodered.ldap.group }}))',
             searchAttributes: ['dn', 'displayName'],
             tlsOptions: {
                 ca: [require('fs').readFileSync('/etc/ssl/cluster/ca.cert')],
