--- a/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-pyload.deploy/app/deploy/statefulset.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: pyload
     spec:
       containers:
-      - image: {{ docker_registry_url }}/pyload
+      - image: {{ docker_registry.url }}/pyload
         name: pyload
         ports:
         - containerPort: 8000
