--- a/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/config/config.yml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry-ui.deploy/app/config/config.yml.j2
@@ -4,7 +4,7 @@ listen_addr: 0.0.0.0:8000
 base_path: /docker-regitry-ui
 
 # Registry URL with schema and port.
-registry_url: https://{{ docker_registry_servername }}
+registry_url: https://{{ docker_registry.servername }}
 # Verify TLS certificate when using https.
 verify_tls: true
 
