--- a/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/infra-docker-registry.deploy/app/deploy/service.yaml.j2
@@ -11,7 +11,7 @@ spec:
   ports:
     - port: 443
       targetPort: 443
-      nodePort: {{ docker_registry_port }}
+      nodePort: {{ docker_registry.port }}
   selector:
     app: docker-registry
     app-component: registry
