--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/zonemta-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: zonemta
     spec:
       containers:
-      - image: {{ docker_registry_url }}/zone-mta
+      - image: {{ docker_registry.url }}/zone-mta
         name: zonemta
         env:
         - name: NODE_OPTIONS
