--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-deployment.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ttrss-deployment.yaml.j2
@@ -22,7 +22,7 @@ spec:
         app-component: ttrss
     spec:
       containers:
-      - image: {{ docker_registry_url }}/ttrss
+      - image: {{ docker_registry.url }}/ttrss
         name: ttrss
         ports:
         - containerPort: 80
