--- a/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
+++ b/ansible/install_applications/roles/download-sabnzbd.deploy/app/deploy/statefulset.yaml.j2
@@ -31,7 +31,7 @@ spec:
         - name: sabnzbd-config
           mountPath: /tmp/config
       containers:
-      - image: {{ docker_registry_url }}/sabnzbd
+      - image: {{ docker_registry.url }}/sabnzbd
         name: sabnzbd
         ports:
         - containerPort: 8080
