Rework vars for infra-mailhog

--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/deploy/deployment.yaml.j2
@@ -33,7 +33,7 @@ spec:
         env:
           - name: MH_UI_WEB_PATH
             value: mailhog
-{% if mailhog_forward_smtp_enabled | bool %}
+{% if mailhog.forward_smtp.enabled | bool %}
           - name: MH_OUTGOING_SMTP
             value: /etc/mailhog/smtp.json
 {% endif %}
