--- a/ansible/install_applications/roles/infra-mailhog.deploy/app/config/smtp.json.j2
+++ b/ansible/install_applications/roles/infra-mailhog.deploy/app/config/smtp.json.j2
@@ -1,21 +1,21 @@
 {
-{% if mailhog_forward_smtp_enabled | bool %}
-    "{{ mailhog_forward_smtp_name }}": {
-{% if mailhog_forward_smtp_email is defined %}
-        "email": "{{ mailhog_forward_smtp_email }}",
+{% if mailhog.forward_smtp.enabled | bool %}
+    "{{ mailhog.forward_smtp.name }}": {
+{% if mailhog.forward_smtp.email is defined %}
+        "email": "{{ mailhog.forward_smtp.email }}",
 {% endif %}
-{% if mailhog_forward_smtp_username is defined %}
-        "username": "{{ mailhog_forward_smtp_username }}",
+{% if mailhog.forward_smtp.username is defined %}
+        "username": "{{ mailhog.forward_smtp.username }}",
 {% endif %}
-{% if mailhog_forward_smtp_password is defined %}
-        "password": "{{ mailhog_forward_smtp_password }}",
+{% if mailhog.forward_smtp.password is defined %}
+        "password": "{{ mailhog.forward_smtp.password }}",
 {% endif %}
-{% if mailhog_forward_smtp_mechanism is defined %}
-        "mechanism": "{{ mailhog_forward_smtp_mechanism }}",
+{% if mailhog.forward_smtp.mechanism is defined %}
+        "mechanism": "{{ mailhog.forward_smtp.mechanism }}",
 {% endif %}
-        "name": "{{ mailhog_forward_smtp_name }}",
-        "host": "{{ mailhog_forward_smtp_host }}",
-        "port": "{{ mailhog_forward_smtp_port }}"
+        "name": "{{ mailhog.forward_smtp.name }}",
+        "host": "{{ mailhog.forward_smtp.host }}",
+        "port": "{{ mailhog.forward_smtp.port }}"
     }
 {% endif %}
 }
