Rework vars for infra-zonemta

--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/plugin_simple-auth.toml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/plugin_simple-auth.toml.j2
@@ -1,8 +1,8 @@
 ["simple-auth"]
-{% if zonemta_feeder_authentication_enabled | bool %}
+{% if zonemta.feeder.authentication_enabled | bool %}
 enabled="receiver"
 interfaces=["feeder"]
 
-username="{{ zonemta_feeder_authentication_username }}"
-password="{{ zonemta_feeder_authentication_password }}"
+username="{{ zonemta.feeder.authentication_username }}"
+password="{{ zonemta.feeder.authentication_password }}"
 {% endif %}
