--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/redis-statefulSet.yaml.j2
@@ -24,7 +24,7 @@ spec:
         name: redis
         command:
         - redis-server
-        - "--requirepass {{ zonemta_redis_password }}"
+        - "--requirepass {{ zonemta.redis.password }}"
         ports:
         - containerPort: 6379
           name: redis
