--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/config/mongodb/create-user.js.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/config/mongodb/create-user.js.j2
@@ -1,8 +1,8 @@
 
 db.createUser(
   {
-    user: "{{ zonemta_mongo_user }}",
-    pwd: "{{ zonemta_mongo_password }}",
-    roles: [ { role: "readWrite", db: "{{ zonemta_mongo_database }}" } ]
+    user: "{{ zonemta.mongo.user }}",
+    pwd: "{{ zonemta.mongo.password }}",
+    roles: [ { role: "readWrite", db: "{{ zonemta.mongo.database }}" } ]
   }
 )
