--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/dbs.toml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/dbs.toml.j2
@@ -2,10 +2,10 @@
 # this file is loaded when NODE_ENV=production
 
 # MongoDB connection string
-mongo="mongodb://{{ zonemta_mongo_user }}:{{ zonemta_mongo_password }}@zonemta-mongo:27017/{{ zonemta_mongo_database }}"
+mongo="mongodb://{{ zonemta.mongo.user }}:{{ zonemta.mongo.password }}@zonemta-mongo:27017/{{ zonemta.mongo.database }}"
 
 # Redis connection string
-redis="redis://:{{ zonemta_redis_password }}@zonemta-redis:6379/0"
+redis="redis://:{{ zonemta.redis.password }}@zonemta-redis:6379/0"
 
 # Database name for ZoneMTA data in MongoDB. In most cases it should be the same as in the connection string
-sender="{{ zonemta_mongo_database }}"
+sender="{{ zonemta.mongo.database }}"
