--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/zone_default.toml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/config/zone-mta/zone_default.toml.j2
@@ -7,10 +7,10 @@ pool="default"
 
 # If you want to send messages for this zone to next MTA instead of actual MX, then
 # uncomment following lines and change values
-host = "{{ zonemta_forward_mta_host }}"
-port = {{ zonemta_forward_mta_port }}
-{% if zonemta_forward_mta_auth_enabled | bool %}
+host = "{{ zonemta.forward.mta_host }}"
+port = {{ zonemta.forward.mta_port }}
+{% if zonemta.forward.mta_auth_enabled | bool %}
 [default.auth]
-user = "{{ zonemta_forward_mta_user }}"
-pass = "{{ zonemta_forward_mta_password }}"
+user = "{{ zonemta.forward.mta_user }}"
+pass = "{{ zonemta.forward.mta_password }}"
 {% endif %}
