--- a/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
+++ b/ansible/install_applications/roles/infra-zonemta.deploy/app/deploy/mongdb-statefulSet.yaml.j2
@@ -26,14 +26,14 @@ spec:
         name: mongo
         env:
         - name: MONGO_INITDB_ROOT_USERNAME
-          value: {{ zonemta_mongo_root_user }}
+          value: {{ zonemta.mongo.root_user }}
         - name: MONGO_INITDB_ROOT_PASSWORD
           valueFrom:
             secretKeyRef:
               name: zonemta-mongo-pass
               key: password
         - name: MONGO_INITDB_DATABASE
-          value: {{ zonemta_mongo_database }}
+          value: {{ zonemta.mongo.database }}
         ports:
         - containerPort: 27017
           name: mongo
