--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/elasticsearch.yml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/elasticsearch.yml.j2
@@ -4,7 +4,7 @@ network.host: 0.0.0.0
 # minimum_master_nodes need to be explicitly set when bound on a public IP
 # set to 1 to allow single node clusters
 # Details: https://github.com/elastic/elasticsearch/pull/17288
-discovery.zen.minimum_master_nodes: {{ (logging_elasticsearch_replicas / 2 + 1) | int }}
+discovery.zen.minimum_master_nodes: {{ (elasticsearch.replicas|int / 2 + 1) | int }}
 
 ######## Start OpenDistro for Elasticsearch Security Configuration ########
 opendistro_security.ssl.transport.pemcert_filepath: certs/server.crt
