--- a/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/internal_users.yml.j2
+++ b/ansible/install_applications/roles/logging-elasticsearch.deploy/app/config/security/internal_users.yml.j2
@@ -1,7 +1,7 @@
 # This is the internal user database
 # The hash value is a bcrypt hash and can be generated with plugin/tools/hash.sh
 
-{% for user in logging_elasticsearch_internal_users | default([]) %}
+{% for user in elasticsearch.internal_users | default([]) %}
 {{ user.name }}:
   readonly: {{ user.readonly }}
   hash: {{ user.password | password_hash('bcrypt', '%021d.' | format(999999999999999999999 | random(seed=inventory_hostname + user.name))) }}
