--- a/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
+++ b/ansible/install_applications/roles/logging-kibana.deploy/app/deploy/deployment.yaml.j2
@@ -30,7 +30,7 @@ spec:
             memory: "{{ kibana_limits_memory | default("512Mi") }}"
         env:
           - name: SERVER_BASEPATH
-            value: {{ logging_kibana_context_path | default('/kibana') }}
+            value: {{ kibana.context_path }}
           - name: ELASTICSEARCH_URL
             value: https://elasticsearch:9200
         ports:
