Rework vars for monitoring-gluster-exporter

--- a/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/endpoint.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/endpoint.yaml.j2
@@ -10,5 +10,5 @@ subsets:
   - ip: {{ glusterfs_node }}
   ports:
   - name: metrics
-    port: {{ gluster_exporter_port }}
+    port: {{ gluster_exporter.port }}
 {% endfor %}
