--- a/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/service.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-gluster-exporter.deploy/app/deploy/service.yaml.j2
@@ -10,5 +10,5 @@ metadata:
 spec:
   ports:
   - name: metrics
-    port: {{ gluster_exporter_port }}
+    port: {{ gluster_exporter.port }}
     targetPort: metrics
