--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/grafana.ini.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/grafana.ini.j2
@@ -148,10 +148,10 @@ log_queries =
 #################################### Security ####################################
 [security]
 # default admin user, created on startup
-admin_user = {{ grafana_admin_user }}
+admin_user = {{ grafana.admin.user }}
 
 # default admin password, can be changed before first start of grafana,  or in profile settings
-admin_password = {{ grafana_admin_password }}
+admin_password = {{ grafana.admin.password }}
 
 # used for signing
 ;secret_key = SW2YcwTIb9zpOOhoPsMm
