--- a/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/ldap.toml.j2
+++ b/ansible/install_applications/roles/monitoring-grafana.deploy/app/config/etc/ldap.toml.j2
@@ -4,7 +4,7 @@
 
 [[servers]]
 # Ldap server host (specify multiple hosts space separated)
-host = "{{ grafana_ldap_servername }}"
+host = "{{ grafana.ldap.servername }}"
 # Default port is 389 or 636 if use_ssl = true
 port = 389
 # Set to true if ldap server supports TLS
@@ -20,16 +20,16 @@ root_ca_cert = "/etc/ssl/cluster/ca.crt"
 # client_key = "/path/to/client.key"
 
 # Search user bind dn
-bind_dn = "{{ grafana_ldap_manager_dn }}"
+bind_dn = "{{ grafana.ldap.manager_dn }}"
 # Search user bind password
 # If the password contains # or ; you have to wrap it with triple quotes. Ex """#password;"""
-bind_password = '{{ grafana_ldap_manager_password }}'
+bind_password = '{{ grafana.ldap.manager_password }}'
 
 # User search filter, for example "(cn=%s)" or "(sAMAccountName=%s)" or "(uid=%s)"
 search_filter = "(cn=%s)"
 
 # An array of base dns to search through
-search_base_dns = ["{{ grafana_ldap_base }}"]
+search_base_dns = ["{{ grafana.ldap.base }}"]
 
 ## For Posix or LDAP setups that does not support member_of attribute you can define the below settings
 ## Please check grafana LDAP docs for examples
@@ -47,7 +47,7 @@ email =  "mail"
 
 # Map ldap groups to grafana org roles
 [[servers.group_mappings]]
-group_dn = "{{ grafana_ldap_group }}"
+group_dn = "{{ grafana.ldap.group }}"
 org_role = "Admin"
 # To make user an instance admin  (Grafana Admin) uncomment line below
 grafana_admin = true
