--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/prometheus.yaml.j2
@@ -38,7 +38,7 @@ spec:
   serviceAccountName: prometheus-k8s
   serviceMonitorNamespaceSelector: {}
   serviceMonitorSelector: {}
-  retention: {{ prometheus_retention | default('7d') }}
+  retention: {{ prometheus.retention }}
   storage:
     volumeClaimTemplate:
       metadata:
