--- a/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/roleSpecificNamespaces.yaml.j2
+++ b/ansible/install_applications/roles/monitoring-prometheus-operator.deploy/app/deploy/prometheus/roleSpecificNamespaces.yaml.j2
@@ -1,4 +1,4 @@
-{% for namespace in prometheus_allowed_namespaces %}
+{% for namespace in prometheus.allowed_namespaces %}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
