--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/config/airsonic.properties.delta.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/config/airsonic.properties.delta.j2
@@ -8,15 +8,15 @@
 # Any other property set here will be ignored.
 
 LdapEnabled=true
-LdapUrl=ldaps://{{ airsonic_ldap_servername }}/{{ airsonic_ldap_users_dn }}
-LdapSearchFilter=(&(cn={0})(memberOf={{ airsonic_ldap_group }}))
-LdapManagerDn={{ airsonic_ldap_manager_dn }}
-LdapManagerPassword={{ airsonic_ldap_manager_password | hexlify }}
+LdapUrl=ldaps://{{ airsonic.ldap.servername }}/{{ airsonic.ldap.users_dn }}
+LdapSearchFilter=(&(cn={0})(memberOf={{ airsonic.ldap.group }}))
+LdapManagerDn={{ airsonic.ldap.manager_dn }}
+LdapManagerPassword={{ airsonic.ldap.manager_password | hexlify }}
 LdapAutoShadowing=true
 
-SmtpServer={{ airsonic_smtp_host }}
-SmtpEncryption={{ airsonic_smtp_encryption }}
-SmtpPort={{ airsonic_smtp_port }}
-SmtpUser={{ airsonic_smtp_user }}
-SmtpFrom={{ airsonic_smtp_from }}
-SmtpPassword={{ airsonic_smtp_password | hexlify }}
+SmtpServer={{ airsonic.smtp.host }}
+SmtpEncryption={{ airsonic.smtp.encryption }}
+SmtpPort={{ airsonic.smtp.port }}
+SmtpUser={{ airsonic.smtp.user }}
+SmtpFrom={{ airsonic.smtp.from }}
+SmtpPassword={{ airsonic.smtp.password | hexlify }}
