--- a/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/stream-airsonic.deploy/app/deploy/ingress.yaml.j2
@@ -14,7 +14,7 @@ spec:
   - host: stream.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ airsonic_context_path | default('/') }}
+        - path: {{ airsonic.context_path }}
           backend:
             serviceName: airsonic
             servicePort: 80
