Rework vars for web-heimdall

--- a/ansible/install_applications/roles/web-heimdall.deploy/app/config/applicationsLoader.php.j2
+++ b/ansible/install_applications/roles/web-heimdall.deploy/app/config/applicationsLoader.php.j2
@@ -1,7 +1,7 @@
 <?php
 
 $dataToLoad = [
-{% for appBlock in heimdall_applications %}
+{% for appBlock in heimdall.applications %}
     {% set appBlockLoop = loop %}
     [
         'username' => '{{ appBlock.username }}',
