--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/ingress.yaml.j2
@@ -14,7 +14,7 @@ spec:
   - host: web.{{ web_base_domain }}
     http:
       paths:
-        - path: {{ ttrss_context_root }}
+        - path: {{ ttrss.context_root }}
           backend:
             serviceName: ttrss
             servicePort: 80
