--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-secret.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-secret.yaml.j2
@@ -8,4 +8,4 @@ metadata:
     app-component: pgsql
 type: Opaque
 data:
-  password: {{ ttrss_pqsql_password | b64encode }}
+  password: {{ ttrss.pgsql.password | b64encode }}
