--- a/ansible/install_applications/roles/web-ttrss.deploy/app/config/nginx_site.conf.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/config/nginx_site.conf.j2
@@ -10,8 +10,8 @@ server {
 
   client_max_body_size 0;
 
-  location {{ ttrss_context_root }} {
-    {% if ttrss_context_root != "/" %}alias /var/www/html;{% endif %}
+  location {{ ttrss.context_root }} {
+    {% if ttrss.context_root != "/" %}alias /var/www/html;{% endif %}
 
     try_files $uri $uri/ /index.html /index.php?$args =404;
 
@@ -20,7 +20,7 @@ server {
       fastcgi_pass 127.0.0.1:9000;
       fastcgi_index index.php;
       include /etc/nginx/fastcgi_params;
-      {% if ttrss_context_root != "/" %}fastcgi_param SCRIPT_FILENAME $request_filename;
+      {% if ttrss.context_root != "/" %}fastcgi_param SCRIPT_FILENAME $request_filename;
       {% endif %}
     }
   }
