--- a/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-configMap.yaml.j2
+++ b/ansible/install_applications/roles/web-ttrss.deploy/app/deploy/pgsql-configMap.yaml.j2
@@ -8,4 +8,4 @@ metadata:
     app-component: pgsql
 data:
   init-ttrss-schema.sql:  |
-    {{ lookup('file', ttrss_temp_schema_path)  | replace('\n', '\n    ') }}
+    {{ lookup('file', ttrss.pgsql.schema_path_temp)  | replace('\n', '\n    ') }}
